--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -6,6 +6,14 @@ on:
   pull_request:
     branches: [ main, develop ]
 
+concurrency:
+  group: healthcare-microservices-${{ github.ref }}
+  cancel-in-progress: true
+
+defaults:
+  run:
+    shell: bash
+
 env:
   JAVA_VERSION: '21'
   GRADLE_VERSION: '8.10'
@@ -15,7 +23,7 @@ env:
   GITHUB_OWNER: ${{ github.repository_owner }}
 
 jobs:
-  # Build and Test
+  # Build and Test  
   build-and-test:
     name: Build and Test
     runs-on: ubuntu-latest
@@ -46,14 +54,25 @@ jobs:
           distribution: 'temurin'
           cache: 'gradle'
       
+      - name: Cache Gradle build cache
+        uses: actions/cache@v4
+        with:
+          path: ~/.gradle/caches/build-cache-*
+          key: gradle-cache-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
+          restore-keys: gradle-cache-
+      
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
       
-      - name: Build ${{ matrix.service }}
+      - name: Build and test ${{ matrix.service }}
         run: ./gradlew :${{ matrix.service }}:build --no-daemon --build-cache --parallel
       
-      - name: Run tests
-        run: ./gradlew :${{ matrix.service }}:test --no-daemon
+      - name: Upload JAR
+        uses: actions/upload-artifact@v4
+        with:
+          name: jar-${{ matrix.service }}
+          path: ${{ matrix.service }}/build/libs/*.jar
+          retention-days: 1
       
       - name: Upload test results
         if: always()
@@ -84,26 +103,24 @@ jobs:
           equipment-service,
           notification-service
         ]
+      max-parallel: 3
     
     permissions:
       contents: read
       packages: write
     
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-      
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-        with:
-          platforms: linux/amd64,linux/arm64
-      
-      - name: Log in to Container Registry
-        uses: docker/login-action@v3
+      - name: Setup Docker
+        uses: ./.github/actions/setup-docker
         with:
           registry: ${{ env.REGISTRY }}
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          platforms: linux/amd64
+      
+      - name: Download built JAR
+        uses: actions/download-artifact@v4
+        with:
+          name: jar-${{ matrix.service }}
+          path: jars/
       
       - name: Extract metadata
         id: meta
@@ -111,11 +128,7 @@ jobs:
         with:
           images: ${{ env.REGISTRY }}/${{ github.repository_owner }}/healthcare-microservices/${{ matrix.service }}
           tags: |
-            type=ref,event=branch
-            type=ref,event=pr
-            type=semver,pattern={{version}}
-            type=semver,pattern={{major}}.{{minor}}
-            type=sha,prefix={{branch}}-
+            type=sha
             type=raw,value=latest,enable={{is_default_branch}}
       
       - name: Build and push Docker image
@@ -123,14 +136,15 @@ jobs:
         with:
           context: .
           file: ./${{ matrix.service }}/Dockerfile
-          platforms: linux/amd64,linux/arm64
+          platforms: linux/amd64
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
+          cache-from: type=gha,scope=${{ matrix.service }}
+          cache-to: type=gha,mode=max,scope=${{ matrix.service }}
           build-args: |
             BUILDKIT_INLINE_CACHE=1
+            JAR_PATH=jars/
 
   # Build Frontend
   build-frontend:
@@ -144,8 +158,11 @@ jobs:
       packages: write
     
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+      - name: Setup Docker
+        uses: ./.github/actions/setup-docker
+        with:
+          registry: ${{ env.REGISTRY }}
+          platforms: linux/amd64
       
       - name: Set up Node.js
         uses: actions/setup-node@v4
@@ -166,26 +183,13 @@ jobs:
         working-directory: ./frontend
         run: npm run build
       
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-        with:
-          platforms: linux/amd64,linux/arm64
-      
-      - name: Log in to Container Registry
-        uses: docker/login-action@v3
-        with:
-          registry: ${{ env.REGISTRY }}
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-      
       - name: Extract metadata
         id: meta
         uses: docker/metadata-action@v5
         with:
           images: ${{ env.REGISTRY }}/${{ github.repository_owner }}/healthcare-microservices/frontend
           tags: |
-            type=ref,event=branch
-            type=sha,prefix={{branch}}-
+            type=sha
             type=raw,value=latest,enable={{is_default_branch}}
       
       - name: Build and push frontend image
@@ -193,12 +197,12 @@ jobs:
         with:
           context: ./frontend
           file: ./frontend/Dockerfile
-          platforms: linux/amd64,linux/arm64
+          platforms: linux/amd64
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
+          cache-from: type=gha,scope=frontend
+          cache-to: type=gha,mode=max,scope=frontend
 
   # Dependency Check
   dependency-check:
@@ -215,6 +219,12 @@ jobs:
           java-version: '21'
           distribution: 'temurin'
           cache: 'gradle'
+      
+      - name: Cache dependency-check data
+        uses: actions/cache@v4
+        with:
+          path: ~/.dependency-check
+          key: dependency-check
       
       - name: Run OWASP Dependency Check
         uses: dependency-check/Dependency-Check_Action@main
